--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,7 +77,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="DropSomething",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Action",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
