--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,6 +80,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Action",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="NextTool",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
++ActionMappings=(ActionName="PreviousTool",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=A)
